--- a/memory/Cargo.toml
+++ b/memory/Cargo.toml
@@ -13,4 +13,5 @@ buddy_system_allocator = "0.6"
 spin = "0.7.0"
 bitflags = "1.2.1"
 xmas-elf = "0.7.0"
+sbi = {path = "../sbi" }
 os_config = {path = "../os_config" }
