--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -7,16 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
-lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
-buddy_system_allocator = "0.6"
-spin = "0.7.0"
-bitflags = "1.2.1"
-easy-fs = { path = "../easy-fs" }
 memory = { path = "../memory" }
-os_config = { path = "../os_config" }
-drivers = { path = "../drivers" }
 sbi = { path = "../sbi" }
+os_core = { path = "../os_core" }
 
 [features]
 board_qemu = []
